# image_processing

./: .gitignore  CMakeLists.txt  main.c  main.cpp
include/: improc.hpp  imqueue.hpp
src/: bitmap.c  bitmap.cpp  improc.cpp  imqueue.cpp
test/: main_gtest.cpp  test_improc.cpp  test_io.cpp
test/own/: test_Image.cpp  test_matrix.cpp
